Nå skal alt av lenker og bilder funke igjen

--- a/mk/index.html
+++ b/mk/index.html
@@ -42,42 +42,42 @@
 
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
-                <a href="../programfag/" class="fag_i_meny">
+                <a href="../mk/programfag/foto/" class="fag_i_meny">
                     <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Bilde (foto)</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/" class="fag_i_meny">
+                <a href="../mk/programfag/film/" class="fag_i_meny">
                     <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Bilde (film)</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/" class="fag_i_meny">
+                <a href="../mk/programfag/vfx/" class="fag_i_meny">
                     <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Bilde (VFX animasjon)</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/" class="fag_i_meny">
+                <a href="../mk/programfag/grafisk_design/" class="fag_i_meny">
                     <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Grafisk design</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/" class="fag_i_meny">
+                <a href="../mk/programfag/lyddesign/" class="fag_i_meny">
                     <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Lyddesign</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/" class="fag_i_meny">
+                <a href="../mk/programfag/tekst/" class="fag_i_meny">
                     <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Tekst - Journalistikk, manus og tekstforfatter</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/" class="fag_i_meny">
+                <a href="../mk/programfag/medieutvikling/" class="fag_i_meny">
                     <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Medieutvikling</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/" class="fag_i_meny">
+                <a href="../mk/programfag/mediespesialisering/" class="fag_i_meny">
                     <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Mediespesialisering</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
@@ -97,7 +97,7 @@
                     <h3 class="fag-tittel"></h3>
                     <p class="fag-beskrivelse"></p>
                     <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../mk/programfag/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -105,7 +105,7 @@
                     <h3 class="fag-tittel"></h3>
                     <p class="fag-beskrivelse"></p>
                     <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../mk/programfag/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/" class="fag-bilde">
             </div>
