--- a/realfag/programfag/informasjonsteknologi/index.html
+++ b/realfag/programfag/informasjonsteknologi/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./it.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Informasjonsteknologi</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Informasjonsteknologi</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="../../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -77,8 +77,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/informasjonsteknologi/rosa_ikon.png" alt="Rosa ikon teknologi">
-                    <img src="../../assets/imgs/informasjonsteknologi/datamaskin.png" alt="Elektronikk datamaskin">
+                    <img src="../../../assets/imgs/informasjonsteknologi/rosa_ikon.png" alt="Rosa ikon teknologi">
+                    <img src="../../../assets/imgs/informasjonsteknologi/datamaskin.png" alt="Elektronikk datamaskin">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -103,7 +103,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/rediger_css_spill/" width="370" height="420" style="border: none;"></iframe>
+                    <iframe src="../../../widgets/rediger_css_spill/" width="370" height="420" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -155,8 +155,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/informasjonsteknologi/enda_mer_kode.png" alt="Kode">
-                    <img src="../../assets/imgs/informasjonsteknologi/sofagruppa.jpg" alt="Folk som samargeider i en sofa">
+                    <img src="../../../assets/imgs/informasjonsteknologi/enda_mer_kode.png" alt="Kode">
+                    <img src="../../../assets/imgs/informasjonsteknologi/sofagruppa.jpg" alt="Folk som samargeider i en sofa">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -178,7 +178,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/it_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="../../../widgets/it_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -192,7 +192,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
