--- a/realfag/programfag/tekforsk/index.html
+++ b/realfag/programfag/tekforsk/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./tekforsk.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Teknologi & Forskningslære</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Teknologi & Forskningslære</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="../../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -69,8 +69,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/teknologi_og_forskningslære/gifs/rakett.gif" alt="Modellrakett som skytes opp">
-                    <img src="../../assets/imgs/teknologi_og_forskningslære/bro.png" alt="Bro med vekt">
+                    <img src="../../../assets/imgs/teknologi_og_forskningslære/gifs/rakett.gif" alt="Modellrakett som skytes opp">
+                    <img src="../../../assets/imgs/teknologi_og_forskningslære/bro.png" alt="Bro med vekt">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -95,7 +95,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/rakett_simulering/" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="../../../widgets/rakett_simulering/" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -131,8 +131,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/teknologi_og_forskningslære/flyvende_cola.jpg" alt="Cola-boks i fallskjerm">
-                    <img src="../../assets/imgs/teknologi_og_forskningslære/ting.jpg" alt="Teknologi">
+                    <img src="../../../assets/imgs/teknologi_og_forskningslære/flyvende_cola.jpg" alt="Cola-boks i fallskjerm">
+                    <img src="../../../assets/imgs/teknologi_og_forskningslære/ting.jpg" alt="Teknologi">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -154,14 +154,14 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/tekforsk_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="../../../widgets/tekforsk_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
