--- a/ssø/index.html
+++ b/ssø/index.html
@@ -42,72 +42,72 @@
 
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
-                <a href="../programfag/entreprenørskap/" class="fag_i_meny">
+                <a href="../ssø/programfag/entreprenørskap/" class="fag_i_meny">
                     <img src="../assets/imgs/entreprenørskap/handshake.png" alt="tar hverandre i hendene over en kontrakt" class="fagmeny_bilde">
                     <p>Entreprenørskap</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/engelsk/" class="fag_i_meny">
+                <a href="../ssø/programfag/engelsk/" class="fag_i_meny">
                     <img src="../assets/imgs/engelsk/shakespear.png" alt="shakespear" class="fagmeny_bilde">
                     <p>Engelsk</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/hifi/" class="fag_i_meny">
+                <a href="../ssø/programfag/hifi/" class="fag_i_meny">
                     <img src="../assets/imgs/hifi/sokrates.png" alt="sokrates" class="fagmeny_bilde">
                     <p>Historie og filosofi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/kinesisk2/" class="fag_i_meny">
+                <a href="../ssø/programfag/kinesisk2/" class="fag_i_meny">
                     <img src="../assets/imgs/kinesisk2/flag.png" alt="kinesisk flagg" class="fagmeny_bilde">
                     <p>Kinesisk 2</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/markedsføring_og_ledelse/" class="fag_i_meny">
+                <a href="../ssø/programfag/markedsføring_og_ledelse/" class="fag_i_meny">
                     <img src="../assets/imgs/markedsføring/rosa_megafon.png" alt="rosa megafon" class="fagmeny_bilde">
                     <p>Markedsføring og ledelse</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/pom/" class="fag_i_meny">
+                <a href="../ssø/programfag/pom/" class="fag_i_meny">
                     <img src="../assets/imgs/pom/person_foran_gjerde.png" alt="Person foran et gjerde" class="fagmeny_bilde">
                     <p>Politikk og menneskerettigheter</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/språk3/" class="fag_i_meny">
+                <a href="../ssø/programfag/språk3/" class="fag_i_meny">
                     <img src="../assets/imgs/språk3/spansk-flagg-vind.png" alt="spansk flagg i vinden" class="fagmeny_bilde">
                     <p>Språk 3</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/psykologi/" class="fag_i_meny">
+                <a href="../ssø/programfag/psykologi/" class="fag_i_meny">
                     <img src="../assets/imgs/psykologi/placeholder_psykologi.jpg" alt="fargerik hjerne illustrasjon" class="fagmeny_bilde">
                     <p>Psykologi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/rettslære/" class="fag_i_meny">
+                <a href="../ssø/programfag/rettslære/" class="fag_i_meny">
                     <img src="../assets/imgs/rettslære/placeholder_rettslære.jpg" alt="lady justice" class="fagmeny_bilde">
                     <p>Rettslære</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/samfunnsgeografi/" class="fag_i_meny">
+                <a href="../ssø/programfag/samfunnsgeografi/" class="fag_i_meny">
                     <img src="../assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" alt="globus" class="fagmeny_bilde">
                     <p>Samfunnsgeografi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/samfunnsøkonomi/" class="fag_i_meny">
+                <a href="../ssø/programfag/samfunnsøkonomi/" class="fag_i_meny">
                     <img src="../assets/imgs/samfunnsøkonomi/graf-aksjer.png" alt="graf over aksjer" class="fagmeny_bilde">
                     <p>Samfunnsøkonomi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/sosiologi_og_sosialantropologi/" class="fag_i_meny">
+                <a href="../ssø/programfag/sosiologi_og_sosialantropologi/" class="fag_i_meny">
                     <img src="../assets/imgs/sosiologi_og_sosialantropologi/statue_leser.png" alt="statue som leser" class="fagmeny_bilde">
                     <p>Sosiologi og sosialantropologi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/r_matte/" class="fag_i_meny" class="matte-fag">
+                <a href="../realfag/programfag/r_matte/" class="fag_i_meny" class="matte-fag">
                     <img src="../assets/imgs/matte_r/matte_r_placeholder.png" alt="funksjon på tavle" class="fagmeny_bilde">
                     <p>Matematikk-R</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/s_matte/" class="fag_i_meny" class="matte-fag">
+                <a href="../realfag/programfag/s_matte/" class="fag_i_meny" class="matte-fag">
                     <img src="../assets/imgs/matte_s/matte_s_placeholder.png" alt="kalkulator og blyant" class="fagmeny_bilde">
                     <p>Matematikk-S</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
@@ -127,7 +127,7 @@
                     <h3 class="fag-tittel">Entreprenørskap</h3>
                     <p class="fag-beskrivelse">Få verdifull erfaring for fremtiden. Start din egen bedrift, lær av feil og suksesser, og bygg et solid nettverk. Lær å tenke som en gründer. Gjennom praktisk arbeid med egen bedrift utvikler du ferdigheter innen økonomi, markedsføring og ledelse.</p>
                     <p class="fag-sitat">"Vi må la innovasjon og entreprenørskap få blomstre, da vil ikke det å fase ut oljen innen 2030 være noe problem." - Nina Brodahl, MDG</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/entreprenørskap/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../ssø/programfag/entreprenørskap/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -135,7 +135,7 @@
                     <h3 class="fag-tittel">Engelsk</h3>
                     <p class="fag-beskrivelse">Engelsk 1 tar deg med på en spennende reise inn i den engelskspråklige verden. Gjennom analyser av aktuelle debatter, litteratur og selvvalgte temaer, utvikler du både språkferdighetene dine og din forståelse av ulike kulturer. Samarbeid, selvstendig arbeid og muntlige presentasjoner er sentrale deler av faget.</p>
                     <p class="fag-sitat">"Language is power, life, and the instru-ment of culture, the instrument of domination, and liberation." - Angela Carter</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/engelsk/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../ssø/programfag/engelsk/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/engelsk/britainflag.png" class="fag-bilde">
             </div>
@@ -148,7 +148,7 @@
                         Den som vet at
                         han ingenting vet,
                         er vis" - Sokrates</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/hifi/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../ssø/programfag/hifi/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -156,7 +156,7 @@
                     <h3 class="fag-tittel">Kinesisk 2</h3>
                     <p class="fag-beskrivelse">Kinesisk 2 gir deg en unik mulighet til å dykke ned i det kinesiske språk og kultur. Gjennom praktiske øvelser, diskusjoner og et spennende universitetsopphold i Kina, utvikler du dine språkferdigheter og får en dypere forståelse for landet.</p>
                     <p class="fag-sitat">"Språk åpner dører, Kinesisk åpner døra til Kina."</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/kinesisk2/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../ssø/programfag/kinesisk2/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/kinesisk2/wall_china.png" class="fag-bilde">
             </div>
@@ -169,7 +169,7 @@
                                                 på psykologi, kommunikasjon, strategisk
                                                 problemløsning og beslutningstaking.</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/markedsføring_og_ledelse/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../ssø/programfag/markedsføring_og_ledelse/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -177,7 +177,7 @@
                     <h3 class="fag-tittel">Politikk og menneskerettigheter</h3>
                     <p class="fag-beskrivelse">I faget politikk og menneskerettigheter diskuterer vi aktuelle saker og vi følger med på det som skjer i verden rundt oss. Innholdet strekker seg fra lokaldemokratiet i Norge til internasjonal konflikthåndtering.</p>
                     <p class="fag-sitat">"Politikk er det muliges kunst" - Otto von Bismarck</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/pom">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../ssø/programfag/pom">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/pom/person_foran_gjerde.png" class="fag-bilde">
             </div>
@@ -187,7 +187,7 @@
                     <h3 class="fag-tittel">Språk 3</h3>
                     <p class="fag-beskrivelse">I språk 3 lærer du både å kommunisere bedre på språket ditt, i tillegg til at du lærer om kulturen, får dra på en språkreise til en språkskole i morsmålslandet <em>og</em> får et halvt studiepoeng!</p>
                     <p class="fag-sitat">"Hvis du snakker til en mann på et språk han forstår, når du hodet hans. Snakker du til ham på hans eget språk, når du hjertet" - Nelson Mandela</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/språk3/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../ssø/programfag/språk3/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -200,7 +200,7 @@
                         sammensatt og mer helhetlig forståelse av
                         mennesket.</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/psykologi/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../ssø/programfag/psykologi/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/psykologi/placeholder_psykologi.jpg" class="fag-bilde">
             </div>
@@ -210,7 +210,7 @@
                     <h3 class="fag-tittel">Rettslære</h3>
                     <p class="fag-beskrivelse">Lov og rett er en byggestein i et demokratisk samfunn. Kjennskap til lover og regler er viktig både for den enkelte og for samfunnet. </p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/rettslære/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../ssø/programfag/rettslære/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -218,7 +218,7 @@
                     <h3 class="fag-tittel">Samfunnsgeografi</h3>
                     <p class="fag-beskrivelse">I Samfunnsgeografi studerer vi sammenhengenen mellom det lokale, regionale og globale. Du får engasjert deg i de problemene samfunnet står overfor. Faget tar for seg noen av de mest sentrale globale samfunnsutfordringene som nevnt i FNs bærekraftsmål.</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/samfunnsgeografi/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../ssø/programfag/samfunnsgeografi/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" class="fag-bilde">
             </div>
@@ -231,23 +231,23 @@
                         i privat og offentlig sektor i Norge, og mellom
                         Norge og andre land.</p>
                     <p class="fag-sitat">"Earth provides enough to satisfy everyman’s needs, but not everyman’s greed." - Mahatma Gandhi</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/samfunnsøkonomi/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../ssø/programfag/samfunnsøkonomi/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Sosiologi og sosialantropologi</h3>
                     <p class="fag-beskrivelse"><p>
-                        Sosiologi & sosialantropologi er et engasjerende fag. For eksempel bruker 
-                        du dine egne livserfaringer for å kaste lys over problemstillingene som 
-                        blir tatt opp i timene. Elever og lærer analyserer sammen de sosiale 
-                        prosessene vi alle er en del av. Liker du å diskutere og drøfte utfordringer 
-                        knyttet til sosiale relasjoner? Er du nysgjerrig og ønsker å lære deg 
-                        verktøy for å kunne utforske og finne svar? Da er dette faget midt i 
+                        Sosiologi & sosialantropologi er et engasjerende fag. For eksempel bruker
+                        du dine egne livserfaringer for å kaste lys over problemstillingene som
+                        blir tatt opp i timene. Elever og lærer analyserer sammen de sosiale
+                        prosessene vi alle er en del av. Liker du å diskutere og drøfte utfordringer
+                        knyttet til sosiale relasjoner? Er du nysgjerrig og ønsker å lære deg
+                        verktøy for å kunne utforske og finne svar? Da er dette faget midt i
                         blinken for deg.
                     </p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/sosiologi_og_sosialantropologi/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../ssø/programfag/sosiologi_og_sosialantropologi/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/sosiologi_og_sosialantropologi/statue_leser.png" class="fag-bilde">
             </div>
@@ -257,7 +257,7 @@
                     <h3 class="fag-tittel">Matematikk-R</h3>
                     <p class="fag-beskrivelse">Matematikk R på Elvebakken handler om å forstå moderne anvendelser av matematikk i realfaglige og samfunnsfaglige sammenhenger. Faget gir elevene mulighet til å utvikle et presist språk for kritisk tenkning, evne til problemløsing og matematisk forståelse.</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/r_matte/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../realfag/programfag/r_matte/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -265,7 +265,7 @@
                     <h3 class="fag-tittel">Matematikk-S</h3>
                     <p class="fag-beskrivelse">Matematikk S på Elvebakken er et fag som tar sikte på å gi elevene en inngående forståelse av moderne anvendelser av matematikk, spesielt innen samfunnsfaglige og økonomiske områder. Målet er å utruste elevene med en solid matematisk kompetanse og evne til å takle komplekse problemstillinger som oppstår i disse kontekstene.</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/s_matte/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../realfag/programfag/s_matte/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/matte_s/matte_s_placeholder.png" class="fag-bilde">
             </div>
