--- a/ssø/programfag/samfunnsøkonomi/index.html
+++ b/ssø/programfag/samfunnsøkonomi/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./samfunnsøkonomi.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Samfunnsøkonomi</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Samfunnsøkonomi</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="../../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
@@ -98,8 +98,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/samfunnsøkonomi/aksjekurs-skjerm.png" alt="Aksjekurser på en skjerm">
-                    <img src="../../assets/imgs/samfunnsøkonomi/håndhilsen-avtale-penger.png" alt="Håndhilsen etter avtale med penger i bakgrunnen">
+                    <img src="../../../assets/imgs/samfunnsøkonomi/aksjekurs-skjerm.png" alt="Aksjekurser på en skjerm">
+                    <img src="../../../assets/imgs/samfunnsøkonomi/håndhilsen-avtale-penger.png" alt="Håndhilsen etter avtale med penger i bakgrunnen">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -157,8 +157,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/samfunnsøkonomi/penger-krysset-ut-verdi.png" alt="Penger der verdien er krysset ut og erstattet med et lavere tall">
-                    <img src="../../assets/imgs/samfunnsøkonomi/tegning-graf-valuta.png" alt="Tegning av søylediagram med valuta">
+                    <img src="../../../assets/imgs/samfunnsøkonomi/penger-krysset-ut-verdi.png" alt="Penger der verdien er krysset ut og erstattet med et lavere tall">
+                    <img src="../../../assets/imgs/samfunnsøkonomi/tegning-graf-valuta.png" alt="Tegning av søylediagram med valuta">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -174,7 +174,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
