--- a/assets/maler/fag_oversikt/index.html
+++ b/assets/maler/fag_oversikt/index.html
@@ -42,12 +42,12 @@
 
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
-                <a href="/programfag/" class="fag_i_meny">
+                <a href="/fag/programfag/" class="fag_i_meny">
                     <img src="/assets/imgs/" alt="test bilde" class="fagmeny_bilde">
                     <p></p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/" class="fag_i_meny">
+                <a href="/fag/programfag/" class="fag_i_meny">
                     <img src="/assets/imgs/" alt="test bilde" class="fagmeny_bilde">
                     <p></p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
@@ -67,7 +67,7 @@
                     <h3 class="fag-tittel"></h3>
                     <p class="fag-beskrivelse"></p>
                     <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="/programfag/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="/fag/programfag/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -75,7 +75,7 @@
                     <h3 class="fag-tittel"></h3>
                     <p class="fag-beskrivelse"></p>
                     <p class="fag-sitat">"" - Person</p>
-                    <a class ="fag-se-mer-knapp" href="/programfag/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="/fag/programfag/">Se mer →</a>
                 </div>
                 <img src="/assets/imgs/" class="fag-bilde">
             </div>
