--- a/realfag/index.html
+++ b/realfag/index.html
@@ -42,42 +42,42 @@
 
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
-                <a href="../programfag/fysikk/" class="fag_i_meny">
+                <a href="../realfag/programfag/fysikk/" class="fag_i_meny">
                     <img src="../assets/imgs/fysikk/placeholder_fysikk.png" alt="fysikk-matte på tavle" class="fagmeny_bilde">
                     <p>Fysikk</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/kjemi/" class="fag_i_meny">
+                <a href="../realfag/programfag/kjemi/" class="fag_i_meny">
                     <img src="../assets/imgs/kjemi/kjemiting.jpg" alt="personer som driver med kjemi" class="fagmeny_bilde">
                     <p>Kjemi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/biologi/" class="fag_i_meny">
+                <a href="../realfag/programfag/biologi/" class="fag_i_meny">
                     <img src="../assets/imgs/biologi/dna_grønn.png" alt="grønt dna" class="fagmeny_bilde">
                     <p>Biologi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/informasjonsteknologi/" class="fag_i_meny">
+                <a href="../realfag/programfag/informasjonsteknologi/" class="fag_i_meny">
                     <img src="../assets/imgs/informasjonsteknologi/kode.png" alt="html-kode" class="fagmeny_bilde">
                     <p>Informasjonsteknologi</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/tekforsk/" class="fag_i_meny">
+                <a href="../realfag/programfag/tekforsk/" class="fag_i_meny">
                     <img src="../assets/imgs/teknologi_og_forskningslære/greier.png" alt="elektronikk" class="fagmeny_bilde">
                     <p>Teknologi og forskningslære</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/geofag/" class="fag_i_meny">
+                <a href="../realfag/programfag/geofag/" class="fag_i_meny">
                     <img src="../assets/imgs/geofag/strand.png" alt="strand" class="fagmeny_bilde">
                     <p>Geofag</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/r_matte/" class="fag_i_meny" class="matte-fag">
+                <a href="../realfag/programfag/r_matte/" class="fag_i_meny" class="matte-fag">
                     <img src="../assets/imgs/matte_r/matte_r_placeholder.png" alt="funksjon på tavle" class="fagmeny_bilde">
                     <p>Matematikk-R</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="../programfag/s_matte/" class="fag_i_meny" class="matte-fag">
+                <a href="../realfag/programfag/s_matte/" class="fag_i_meny" class="matte-fag">
                     <img src="../assets/imgs/matte_s/matte_s_placeholder.png" alt="kalkulator og blyant" class="fagmeny_bilde">
                     <p>Matematikk-S</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
@@ -97,7 +97,7 @@
                     <h3 class="fag-tittel">Fysikk</h3>
                     <p class="fag-beskrivelse">Fysikk på Elvebakken gir deg innsikt i alt fra kvantefysikk til astrofysikk. Du vil lære om de grunnleggende prinsippene som styrer universet og få muligheten til å utforske spennende eksperimenter.</p>
                     <p class="fag-sitat">"Det mest uforståelige med universet er at det er forståelig." - Albert Einstein</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/fysikk/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../realfag/programfag/fysikk/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -105,7 +105,7 @@
                     <h3 class="fag-tittel">Kjemi</h3>
                     <p class="fag-beskrivelse">Kjemi på Elvebakken dekker alt fra grunnleggende kjemiske reaksjoner til avanserte laboratorieteknikker. Du vil lære om stoffenes egenskaper og hvordan de interagerer med hverandre.</p>
                     <p class="fag-sitat">"Kjemien har et eget språk, med egne symboler og notasjoner, som brukes for å beskrive sammenhenger og reaksjoner." - Snl.no</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/kjemi/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../realfag/programfag/kjemi/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/kjemi/kjemiting.jpg" class="fag-bilde">
             </div>
@@ -115,7 +115,7 @@
                     <h3 class="fag-tittel">Biologi</h3>
                     <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
                     <p class="fag-sitat">"Ingenting i biologien gir mening, untatt i lys av evolusjonen." - T.Dobzhansky</p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/biologi/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../realfag/programfag/biologi/">Se mer →</a>
                 </div>
             </div>
             <div class = "fag-element">
@@ -125,7 +125,7 @@
                     <h3 class="fag-tittel">IT</h3>
                     <p class="fag-beskrivelse">Informasjonsteknologi (IT) på Elvebakken er et spennende og praktisk fag hvor du får lære alt fra programmering og nettverk til spillutvikling og kunstig intelligens.</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/informasjonsteknologi/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../realfag/programfag/informasjonsteknologi/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/informasjonsteknologi/kode.png" class="fag-bilde">
             </div>
@@ -135,7 +135,7 @@
                     <h3 class="fag-tittel">Teknologi og forskningslære</h3>
                     <p class="fag-beskrivelse">Teknologi- og forskningslære på Elvebakken tar deg med inn i verden av innovasjon, teknologi og vitenskapelig utforskning. Dette faget gir deg et bredt perspektiv på teknologiske prinsipper og forskningsmetoder.</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/tekforsk/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../realfag/programfag/tekforsk/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -143,7 +143,7 @@
                     <h3 class="fag-tittel">Geofag</h3>
                     <p class="fag-beskrivelse">Geofag på Elvebakken tar deg med på en reise gjennom jordens mange lag og prosesser. Her vil du utforske de vitenskapelige prinsippene som ligger til grunn for forståelsen av jorden og dens geologiske, atmosfæriske og hydrologiske systemer.</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/geofag/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../realfag/programfag/geofag/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/geofag/strand.png" class="fag-bilde">
             </div>
@@ -153,7 +153,7 @@
                     <h3 class="fag-tittel">Matematikk - R</h3>
                     <p class="fag-beskrivelse">Matematikk R på Elvebakken handler om å forstå moderne anvendelser av matematikk i realfaglige og samfunnsfaglige sammenhenger. Faget gir elevene mulighet til å utvikle et presist språk for kritisk tenkning, evne til problemløsing og matematisk forståelse.</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/r_matte/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../realfag/programfag/r_matte/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
@@ -161,7 +161,7 @@
                     <h3 class="fag-tittel">Matematikk - S</h3>
                     <p class="fag-beskrivelse">Matematikk S på Elvebakken er et fag som tar sikte på å gi elevene en inngående forståelse av moderne anvendelser av matematikk, spesielt innen samfunnsfaglige og økonomiske områder. Målet er å utruste elevene med en solid matematisk kompetanse og evne til å takle komplekse problemstillinger som oppstår i disse kontekstene.</p>
                     <p class="fag-sitat"></p>
-                    <a class ="fag-se-mer-knapp" href="../programfag/s_matte/">Se mer →</a>
+                    <a class ="fag-se-mer-knapp" href="../realfag/programfag/s_matte/">Se mer →</a>
                 </div>
                 <img src="../assets/imgs/matte_s/matte_s_placeholder.png" class="fag-bilde">
             </div>
