--- a/realfag/programfag/fysikk/index.html
+++ b/realfag/programfag/fysikk/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./fysikk.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Fysikk</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Fysikk</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="../../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -83,8 +83,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/fysikk/pendel.png" alt="Pendel">
-                    <img src="../../assets/imgs/fysikk/lyspaere.png" alt="Lyspære">
+                    <img src="../../../assets/imgs/fysikk/pendel.png" alt="Pendel">
+                    <img src="../../../assets/imgs/fysikk/lyspaere.png" alt="Lyspære">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -98,7 +98,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/rakett_simulering/" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="../../../widgets/rakett_simulering/" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -146,8 +146,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/fysikk/elektromagnetisme.png" alt="Elektromagnetisme illustrasjon">
-                    <img src="../../assets/imgs/fysikk/kvantefysikk.png" alt="Insiden av en partikkelakselerator">
+                    <img src="../../../assets/imgs/fysikk/elektromagnetisme.png" alt="Elektromagnetisme illustrasjon">
+                    <img src="../../../assets/imgs/fysikk/kvantefysikk.png" alt="Insiden av en partikkelakselerator">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -160,14 +160,14 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/pendel/index.html" id="pendel"></iframe>
+                    <iframe src="../../../widgets/pendel/index.html" id="pendel"></iframe>
                 </div>
             </div>
         </div>
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
