--- a/realfag/programfag/kjemi/index.html
+++ b/realfag/programfag/kjemi/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./kjemi.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Kjemi</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Kjemi</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="../../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -90,8 +90,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/kjemi/dude_med_dråpeteller.jpg" alt="Person med dråpeteller">
-                    <img src="../../assets/imgs/kjemi/periodesystem_brikker.png" alt="Brikker av periodesystemet">
+                    <img src="../../../assets/imgs/kjemi/dude_med_dråpeteller.jpg" alt="Person med dråpeteller">
+                    <img src="../../../assets/imgs/kjemi/periodesystem_brikker.png" alt="Brikker av periodesystemet">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -118,7 +118,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/bland_salter_spill/index.html"></iframe>
+                    <iframe src="../../../widgets/bland_salter_spill/index.html"></iframe>
                 </div>
             </div>
         </div>
@@ -175,8 +175,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/kjemi/atomikon_rød.png" alt="Rødt atomikon">
-                    <img src="../../assets/imgs/kjemi/kjemiting.jpg" alt="Folk som driver med kjemi">
+                    <img src="../../../assets/imgs/kjemi/atomikon_rød.png" alt="Rødt atomikon">
+                    <img src="../../../assets/imgs/kjemi/kjemiting.jpg" alt="Folk som driver med kjemi">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -201,7 +201,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/drag_and_drop_kjemi_spill/index.html"></iframe>
+                    <iframe src="../../../widgets/drag_and_drop_kjemi_spill/index.html"></iframe>
                 </div>
             </div>
         </div>
@@ -216,23 +216,23 @@
 
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides fade">
-                        <img src="../../assets/imgs/kjemi/bilde_fra_timen_1.jpg">
+                        <img src="../../../assets/imgs/kjemi/bilde_fra_timen_1.jpg">
                     </div>
 
                     <div class="mySlides fade">
-                        <img src="../../assets/imgs/kjemi/bilde_fra_timen_2.jpg">
+                        <img src="../../../assets/imgs/kjemi/bilde_fra_timen_2.jpg">
                     </div>
 
                     <div class="mySlides fade">
-                        <img src="../../assets/imgs/kjemi/bilde_fra_timen_3.jpg">
+                        <img src="../../../assets/imgs/kjemi/bilde_fra_timen_3.jpg">
                     </div>
 
                     <div class="mySlides fade">
-                        <img src="../../assets/imgs/kjemi/bilde_fra_timen_4.jpg">
+                        <img src="../../../assets/imgs/kjemi/bilde_fra_timen_4.jpg">
                     </div>
 
                     <div class="mySlides fade">
-                        <img src="../../assets/imgs/kjemi/bilde_fra_timen_5.jpg">
+                        <img src="../../../assets/imgs/kjemi/bilde_fra_timen_5.jpg">
                     </div>
 
                     <!-- Next and previous buttons -->
@@ -254,8 +254,8 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
-    <script src="../../script/kjemi.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
+    <script src="../../../script/kjemi.js"></script>
 </body>
 </html>
