--- a/realfag/programfag/r_matte/index.html
+++ b/realfag/programfag/r_matte/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./matte_r.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Matematikk-R</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Matematikk-R</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="../../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -95,8 +95,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/matte_r/mer_matte.png" alt="Grafer i geogebra">
-                    <img src="../../assets/imgs/matte_r/numerisk.png" alt="Halveringsmetoden i python" id="bilde2">
+                    <img src="../../../assets/imgs/matte_r/mer_matte.png" alt="Grafer i geogebra">
+                    <img src="../../../assets/imgs/matte_r/numerisk.png" alt="Halveringsmetoden i python" id="bilde2">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -122,7 +122,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/vektor_spill/index.html" width="510" height="470" style="border: none;"></iframe>
+                    <iframe src="../../../widgets/vektor_spill/index.html" width="510" height="470" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -183,8 +183,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/matte_r/geogebra_spiral.png" alt="Spiral geogebra">
-                    <img src="../../assets/imgs/matte_r/matte_på_spansk.png" alt="matte i mattebok">
+                    <img src="../../../assets/imgs/matte_r/geogebra_spiral.png" alt="Spiral geogebra">
+                    <img src="../../../assets/imgs/matte_r/matte_på_spansk.png" alt="matte i mattebok">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -206,15 +206,15 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/r2_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="../../../widgets/r2_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
-    <script src="../../script/matte.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
+    <script src="../../../script/matte.js"></script>
 </body>
 </html>
