--- a/realfag/programfag/s_matte/index.html
+++ b/realfag/programfag/s_matte/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./matte_s.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Matematikk-S</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Matematikk-S</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
+            <a href="../../../realfag/" id="tilbake-knapp">&lt; Tilbake til realfag</a>
         </div>
     </header>
     <main>
@@ -83,8 +83,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/matte_s/grafer.png" alt="Grafer">
-                    <img src="../../assets/imgs/matte_s/terninger.png" alt="Terninger">
+                    <img src="../../../assets/imgs/matte_s/grafer.png" alt="Grafer">
+                    <img src="../../../assets/imgs/matte_s/terninger.png" alt="Terninger">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -109,7 +109,7 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/tør_du_satse/index.html" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="../../../widgets/tør_du_satse/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
@@ -155,8 +155,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/matte_s/statistikk.png" alt="Statistikk">
-                    <img src="../../assets/imgs/matte_s/derivasjon.png" alt="Derivasjon">
+                    <img src="../../../assets/imgs/matte_s/statistikk.png" alt="Statistikk">
+                    <img src="../../../assets/imgs/matte_s/derivasjon.png" alt="Derivasjon">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -181,15 +181,15 @@
 
                 </div>
                 <div class="interaktivt-element">
-                    <iframe src="../../widgets/s2_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
+                    <iframe src="../../../widgets/s2_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
                 </div>
             </div>
         </div>
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
-    <script src="../../script/matte.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
+    <script src="../../../script/matte.js"></script>
 </body>
 </html>
