--- a/ssø/programfag/markedsføring_og_ledelse/index.html
+++ b/ssø/programfag/markedsføring_og_ledelse/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./markedsføring.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Markedsføring og ledelse</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Markedsføring og ledelse</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="../../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
@@ -71,8 +71,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/markedsføring/hode.png" alt="Illustrasjon hode med ideer">
-                    <img src="../../assets/imgs/markedsføring/sirkler.png" alt="Markedsføringsideer på whiteboard">                    
+                    <img src="../../../assets/imgs/markedsføring/hode.png" alt="Illustrasjon hode med ideer">
+                    <img src="../../../assets/imgs/markedsføring/sirkler.png" alt="Markedsføringsideer på whiteboard">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -90,7 +90,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
