--- a/ssø/programfag/psykologi/index.html
+++ b/ssø/programfag/psykologi/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./psykologi.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Psykologi</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Psykologi</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="../../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
@@ -82,8 +82,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/psykologi/emojies-forskjellige-følelser.png" alt="emojies forskjellige følelser">
-                    <img src="../../assets/imgs/psykologi/hjerne-av-ord.png" alt="Hjerne av ord">
+                    <img src="../../../assets/imgs/psykologi/emojies-forskjellige-følelser.png" alt="emojies forskjellige følelser">
+                    <img src="../../../assets/imgs/psykologi/hjerne-av-ord.png" alt="Hjerne av ord">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -137,8 +137,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/psykologi/syk-person-hjemme.png" alt="Syk person hjemme">
-                    <img src="../../assets/imgs/psykologi/to-personer-av-ord.png" alt="To personer lagd av ord">
+                    <img src="../../../assets/imgs/psykologi/syk-person-hjemme.png" alt="Syk person hjemme">
+                    <img src="../../../assets/imgs/psykologi/to-personer-av-ord.png" alt="To personer lagd av ord">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -155,7 +155,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
