--- a/ssø/programfag/rettslære/index.html
+++ b/ssø/programfag/rettslære/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./rettslære.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Rettslære</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Rettslære</h1>
             <!-- knapp tilbake til realfagssiden -->
-            <a href="../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="../../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
@@ -68,8 +68,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/rettslære/bok_norges_lover.jpg" alt="Norges lover bok">
-                    <img src="../../assets/imgs/rettslære/dommer-hammer.png" alt="Dommer-hammer">
+                    <img src="../../../assets/imgs/rettslære/bok_norges_lover.jpg" alt="Norges lover bok">
+                    <img src="../../../assets/imgs/rettslære/dommer-hammer.png" alt="Dommer-hammer">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -121,8 +121,8 @@
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/rettslære/dommer.png" alt="Dommer">
-                    <img src="../../assets/imgs/rettslære/paragraf-og-dommer-hammer.png" alt="Paragraf og dommer-hammer">
+                    <img src="../../../assets/imgs/rettslære/dommer.png" alt="Dommer">
+                    <img src="../../../assets/imgs/rettslære/paragraf-og-dommer-hammer.png" alt="Paragraf og dommer-hammer">
                 </div>
                 <div class="elev-sitat">
                 </div>
@@ -138,7 +138,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
