--- a/ssø/programfag/sosialkunnskap/index.html
+++ b/ssø/programfag/sosialkunnskap/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../style/global.css">
+    <link rel="stylesheet" href="../../../style/programfag.css">
     <link rel="stylesheet" href="./sosialkunnskap.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
     <title>Sosialkunnskap</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <div id="forside-bilde">
             <h1>Sosialkunnskap</h1>
             <!-- knapp tilbake til X -->
-            <a href="../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="../../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
@@ -92,8 +92,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/sosialkunnskap/Barn_holder_hender_ikon.png" alt="Placeholder">
-                    <img src="../../assets/imgs/sosialkunnskap/trist_mann.png" alt="Placeholder">
+                    <img src="../../../assets/imgs/sosialkunnskap/Barn_holder_hender_ikon.png" alt="Placeholder">
+                    <img src="../../../assets/imgs/sosialkunnskap/trist_mann.png" alt="Placeholder">
                 </div>
                 <div class="elev-sitat">
                     <h3>Sentrale spørsmål</h3>
@@ -127,7 +127,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../script/footer.js"></script>
+    <script src="../../../script/global.js"></script>
 </body>
 </html>
