--- a/ssø/programfag/sosiologi_og_sosialantropologi/index.html
+++ b/ssø/programfag/sosiologi_og_sosialantropologi/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../style/global.css">
-    <link rel="stylesheet" href="../../style/programfag.css">
+    <link rel="stylesheet" href="../../../../style/global.css">
+    <link rel="stylesheet" href="../../../../style/programfag.css">
     <link rel="stylesheet" href="./sos.css">
-    <link rel="icon" href="../../assets/icons/favicon.png" type="image/png">
+    <link rel="icon" href="../../../../assets/icons/favicon.png" type="image/png">
     <title>Sosiologi & sosialantropologi</title>
 </head>
 <body>
@@ -15,19 +15,19 @@
         <div id="forside-bilde">
             <h1>Sosiologi & sosialantropologi</h1>
             <!-- knapp tilbake til X -->
-            <a href="../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="../../../../ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Sosiologi & sosialantropologi er et engasjerende fag. For eksempel bruker 
-                du dine egne livserfaringer for å kaste lys over problemstillingene som 
-                blir tatt opp i timene. Elever og lærer analyserer sammen de sosiale 
-                prosessene vi alle er en del av. Liker du å diskutere og drøfte utfordringer 
-                knyttet til sosiale relasjoner? Er du nysgjerrig og ønsker å lære deg 
-                verktøy for å kunne utforske og finne svar? Da er dette faget midt i 
+                Sosiologi & sosialantropologi er et engasjerende fag. For eksempel bruker
+                du dine egne livserfaringer for å kaste lys over problemstillingene som
+                blir tatt opp i timene. Elever og lærer analyserer sammen de sosiale
+                prosessene vi alle er en del av. Liker du å diskutere og drøfte utfordringer
+                knyttet til sosiale relasjoner? Er du nysgjerrig og ønsker å lære deg
+                verktøy for å kunne utforske og finne svar? Da er dette faget midt i
                 blinken for deg.
             </p>
         </div>
@@ -41,7 +41,7 @@
                     <h3>Rask oversikt</h3>
                     <li>Eksamensform: <b>Muntlig</b></li>
                     <li>Bygger på andre fag: <b>Nei</b></li>
-                    <li>Gir fordypning i SSØ sammen ett av fagene: 
+                    <li>Gir fordypning i SSØ sammen ett av fagene:
                         <b>
                         <li>Sosialkunnskap</li>
                         <li>Samfunnsgeografi</li>
@@ -53,39 +53,39 @@
                     <h3>Hva er sosiologi og sosialantropologi?</h3>
                     <ul>
                         <li>
-                            Programfaget er satt sammen av to universitetsfag, men fagene har svært 
-                            mange likhetstrekk og anvender i stor grad de samme 
+                            Programfaget er satt sammen av to universitetsfag, men fagene har svært
+                            mange likhetstrekk og anvender i stor grad de samme
                             samfunnsvitenskapelige metodene
                         </li>
                         <li>
-                            Sosiologi betyr læren om samfunnet 
-                            og læren om sosiale systemer, enten det dreier seg om sosiale relasjoner 
-                            og fellesskap mellom få, eller om organisasjoner, institusjoner og hele 
+                            Sosiologi betyr læren om samfunnet
+                            og læren om sosiale systemer, enten det dreier seg om sosiale relasjoner
+                            og fellesskap mellom få, eller om organisasjoner, institusjoner og hele
                             samfunn
                         </li>
                         <li>
-                            Ordet sosialantropologi betyr læren om mennesket i samfunnet 
+                            Ordet sosialantropologi betyr læren om mennesket i samfunnet
                             og kan beskrives som det sammenlignende studiet av kultur og samfunn
                         </li>
                         <li>
-                            Faget utvikler evnen til å forstå enkeltmenneskers handlinger i 
+                            Faget utvikler evnen til å forstå enkeltmenneskers handlinger i
                             sammenheng med samfunnet du er en del av
                         </li>
                         <li>
-                            Hva kan være årsaker til 
+                            Hva kan være årsaker til
                             høyreekstremisme eller annen kriminalitet?
                         </li>
                         <li>
-                            Hva kan forklare sosial 
+                            Hva kan forklare sosial
                             ulikhet og fordeling av makt og goder?
                         </li>
                         <li>
-                            Hva er likheter og forskjeller 
+                            Hva er likheter og forskjeller
                             mellom kulturer, og hva kan vi lære av det?
                         </li>
                         <li>
-                            Du får innføring i hvordan 
-                            forske på mennesker og samfunn, lærer om ulike teorier og perspektiver 
+                            Du får innføring i hvordan
+                            forske på mennesker og samfunn, lærer om ulike teorier og perspektiver
                             og lærer å selv bli i stand til å utføre egen forskning
                         </li>
                     </ul>
@@ -111,8 +111,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/sosiologi_og_sosialantropologi/Barn_holder_hender_ikon.png" alt="Tegning barm som holder hender">
-                    <img src="../../assets/imgs/sosiologi_og_sosialantropologi/trist_mann.png" alt="Trist mann">
+                    <img src="../../../../assets/imgs/sosiologi_og_sosialantropologi/Barn_holder_hender_ikon.png" alt="Tegning barm som holder hender">
+                    <img src="../../../../assets/imgs/sosiologi_og_sosialantropologi/trist_mann.png" alt="Trist mann">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hvorfor velge sosiologi & sosialantropologi?</h3>
@@ -138,7 +138,7 @@
     </main>
     <!-- Footer -->
     <div id="footer-placeholder"></div>
-    <script src="../../script/footer.js"></script>
-    <script src="../../script/global.js"></script>
+    <script src="../../../../script/footer.js"></script>
+    <script src="../../../../script/global.js"></script>
 </body>
 </html>
